--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,18 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.appcompat:appcompat-resources:$appcompat_version"
 
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.thoughtbot:expandablerecyclerview:1.4'
+
+    dependencies {
+        def fragment_version = "1.3.4"
+
+        // Java language implementation
+        implementation "androidx.fragment:fragment:$fragment_version"
+        // Kotlin
+        implementation "androidx.fragment:fragment-ktx:$fragment_version"
+        // Testing Fragments in Isolation
+        debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
+    }
 }
