--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.thoughtbot:expandablerecyclerview:1.4'
+    implementation 'com.google.code.gson:gson:2.8.7'
 
     dependencies {
         def fragment_version = "1.3.4"
